--- a/code/PA1_template.Rmd
+++ b/code/PA1_template.Rmd
@@ -26,7 +26,7 @@ library(tidyr)     # for tidying and shaping data
 library(knitr)     # for using kable to generate tables
 ```
 
-Load the zipped CSV data (using readr's read_csv) into a data set (tibble) called activity.
+Load the zipped CSV data (using `readr::read_csv`) into a data set (`tibble`) called activity.
 
 ```{r}
 activity <- read_csv("activity.zip")
@@ -41,9 +41,7 @@ summary(activity)
 str(activity)
 ```
 
-Therefore, no further processing is required since readr's read_csv() correctly detects the variable data types.
-
-
+Therefore, no further processing is required since `readr::read_csv()` correctly detects the variable data types.
 
 
 ## What is mean total number of steps taken per day?
@@ -51,12 +49,14 @@ Therefore, no further processing is required since readr's read_csv() correctly 
 ### Requirement 1
 > Make a histogram of the **total** number of steps taken each day
 
+Note that ggplot's `geom_bar()` is used here and not `geom_histogram()`.  See [RStudio blog on ggplot](https://blog.rstudio.org/2015/12/21/ggplot2-2-0-0/).
+
 ```{r warning=FALSE}
 ggplot(activity, aes(x = date, y = steps)) +
-    geom_histogram(stat = "sum") +
+    geom_bar(stat = "sum") +
     theme(legend.position = "none") +                              # do not show histogram legend
     labs(x = "Date of Measurement", y = "Total Number of Steps") + # set label text
-    ggtitle("Total Number of Steps per Day")                        # set title
+    ggtitle("Total Number of Steps per Day")                       # set title
 ```
 
 ### Requirement 2
@@ -134,8 +134,13 @@ There are `r na_count[1,1]` missing values for the steps variable only.
 
 Firstly, which rows (dates) have missing step values?
 ```{r}
-activity_na  <- activity %>% filter(is.na(steps)) %>% group_by(date) %>% summarise(na_count = n())
-kable(activity_na, caption = "Days with missing step data", col.names = c("Date", "Number of missing intervals"))
+activity_na  <- activity %>%
+                    filter(is.na(steps)) %>%
+                    group_by(date) %>%
+                    summarise(na_count = n())
+kable(activity_na,
+      caption   = "Days with missing step data",
+      col.names = c("Date", "Number of missing intervals"))
 ```
 
 Are these for whole days or for part days?
@@ -193,7 +198,7 @@ fill_missing_values <- function(date_missing) {
 
 New tibble with filled in values
 ```{r}
-activity_na_dates  <- as.tbl( lapply(dates_na, fill_missing_values) %>% do.call(rbind, .) )
+activity_na_dates  <- as.tbl( lapply(activity_na$date, fill_missing_values) %>% do.call(rbind, .) )
 kable(head(activity_na_dates), caption = "Data set of steps per interval for missing dates (first few rows)")
 ```
 
@@ -217,7 +222,7 @@ kable(head(activity_filled), caption = "Original data set with missing data fill
 
 ```{r warning = FALSE}
 ggplot(activity_filled, aes(x = date, y = steps)) +
-    geom_histogram(stat = "sum") +
+    geom_bar(stat = "sum") +
     theme(legend.position = "none") +                              # do not show histogram legend
     labs(x = "Date of Measurement", y = "Total Number of Steps") + # set label text
     ggtitle("Total Number of Steps per Day", "Filled in data")     # set title and sub-title
@@ -245,7 +250,9 @@ ggplot(activity_filled_by_day,  aes(x = date, y = step_mean)) +
     geom_line(color = "red") +
     geom_point(aes(y = step_median), color = "red") +
     geom_line(data = activity_by_day, aes(x = date, y = step_mean), color = "blue") +
-    geom_point(data = activity_by_day, aes(y = step_median), color = "blue")
+    geom_point(data = activity_by_day, aes(y = step_median), color = "blue") +
+    labs(x = "Date of Measurement", y = "Average Number of Steps") +        # set label text
+    ggtitle("Average Number of Steps per Day with filled in missing days")  # set title
 ```
 
 > What is the impact of imputing missing data on the estimates of the total daily number of steps?
